--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "workbench.colorCustomizations": {
-        "activityBar.background": "#381675",
-        "titleBar.activeBackground": "#4F1EA3",
-        "titleBar.activeForeground": "#FDFCFE"
-    }
+    "liveServer.settings.port": 5501
 }
